# Pastel

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
Sources/: Test.cpp  Test.h  Window.cpp  Window.hpp  WindowSpecification.hpp
